# rede-incluidora

./: .env  .gitignore  Diagrama sem nome.drawio  README.md  alembic.ini  deployment.md  development.md  docker-compose.override.yml  docker-compose.traefik.yml  docker-compose.yml  package-lock.json  package.json  prestart.sh  release-notes.md  requirements.txt
backend/: .gitignore  Dockerfile  README.md  fly.toml  prestart.sh  pyproject.toml  requirements.txt  vercel.json
backend/app/alembic/: env.py
backend/app/alembic/versions/: 08e445fecf6c_correção_campo_da_tabela_specialization.py  17de59c971c2_refatc_tables.py  230a70c21042_create_professional_model.py  31b23fc27260_professional_insurance_table.py  736245464170_correção_campo_da_tabela_insurance.py  85f0cbd9c7c3_include_user_id_in_professionals_table.py  90b946c243ba_unique_value_in_specialization_and_.py  9e3a64beb834_create_address_phone_and_social_media_.py  9e96c2218454_user_table.py  a2b8b823e0bb_include_post_table.py  ae3aa4e5d5b4_create_article_table.py  (+8 more)
backend/app/api/: deps.py  main.py
backend/app/core/: config.py  db.py
backend/app/crud/: filters.py  professional.py  user.py
backend/app/models/: __init__.py  addresses.py  articles.py  filters.py  insurances.py  phones.py  posts.py  professional.py  professional_insurances.py  professionals.py  professionals_addresses.py  professionals_data.py  professionals_insurances_link.py  professionals_phones.py  professionals_social_media.py  professionals_specializations.py  professionals_specializations_link.py  security.py  social_media.py  specialization  specialization.py  specializations.py  token.py  users.py  users_insurances.py  users_specializations.py
backend/app/repositories/: __init__.py  article.py  post.py  professional.py
backend/app/utils/: populate_database.py
backend/scripts/: clear_cache.sh
(+101 files in other folders)
